--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -20,9 +20,16 @@
     text-align: center;
     font-family: $font-stack-sansserif-1;
     font-size: 16px;
-    color: #BDC3C7;
+    color: $color-primary-tanwhite;
     padding-left: 200px;
     margin: 5px 0 50px 0;
+}
+
+.errormsg {
+    font-family: $font-stack-sansserif-1;
+    font-size: 16px;
+    color: $color-primary-yellow;
+    padding-left: 20px;
 }
 
 .login {
