--- a/client/app/rotation/rotation.scss
+++ b/client/app/rotation/rotation.scss
@@ -29,6 +29,17 @@
         color: white;
     }
 
+    #minnies {
+        font-family: $font-stack-sansserif-2;
+        background-color: white;
+        color: $color-primary-orange;
+        float: left;
+        padding: 5px 12px;
+        margin: 18px 12px;
+        border: 1px solid $color-primary-orange;
+        border-radius: 5px;
+    }
+
     #user {
         font-family: $font-stack-sansserif-1;
         float: right;
@@ -254,10 +265,42 @@
 
     #badgesListHeader {
         padding-top: 120px;
+        padding-bottom: 30px;
         width: 100%;
         margin: 0 auto;
         font-family: $font-stack-sansserif-2;
         font-size: 2.4em;
+    }
+
+    #badgesListItems {
+        width: 100%;
+        height: 100%;
+        margin: 0 auto;
+        overflow-y: auto; 
+    }
+
+    .badge {
+        background-color: #f8f8f9;
+        width: 25%;
+        padding: 25px;
+        margin: 30px;
+        border-radius: 0px;
+        color: $color-primary-orange;
+
+        .badgeIcon img {
+            width: 50%;
+            height: 50%;
+        }
+
+        .badgeDesc {
+            font-family: $font-stack-sansserif-1;
+            font-size: 1.5em;
+        }
+
+        .badgeDate {
+            font-family: $font-stack-sansserif-2;
+            font-size: 1.2em;
+        }
     }
 
 }
