display reports with diff highlighting option

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -41,6 +41,8 @@ $color-transparent-blue: rgba(129, 207, 224, 0.92);
 $color-primary-gray: #95A5A6;
 $color-primary-yellow: #F5D76E;
 $color-primary-green: #68C3A3;
+$color-primary-darkgreen: #1BBC9B;
+$color-primary-red: #D24D57;
 $color-primary-darkblue: #2C3E50;
 $color-primary-darkdarkblue: #22313F;
 $color-primary-tanwhite: #F2F1EF;
