--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -174,6 +174,7 @@ $color-transparent-orange: rgba(242, 120, 75, 0.92);
 
 // Component styles are injected through grunt
 // injector
+@import 'disease/disease.scss';
 @import 'main/main.scss';
 @import 'rotation/rotation.scss';
 // endinjector
