--- a/client/app/disease/disease.scss
+++ b/client/app/disease/disease.scss
@@ -1,15 +1,3 @@
-.bullet { font: 10px sans-serif; }
-.bullet .marker { stroke: #000; stroke-width: 2px; }
-.bullet .tick line { stroke: #666; stroke-width: .5px; }
-.bullet .range.s0 { fill: #eee; }
-.bullet .range.s1 { fill: #ddd; }
-.bullet .range.s2 { fill: #ccc; }
-.bullet .measure.s0 { fill: lightsteelblue; }
-.bullet .measure.s1 { fill: steelblue; }
-.bullet .title { font-size: 14px; font-weight: bold; }
-.bullet .subtitle { fill: #999; }
-
-
 #dashboard-header {
     #rotationview {
         color: $color-primary-blue;
@@ -21,18 +9,210 @@
     }
 }
 
-.panel {
-    padding: 8px;
-    color: $color-primary-darkblue;
-    font-family: $font-stack-slabserif;
-    border: 1px solid white;
-    border-radius: 0px;
-}
-.panel:hover {
-    cursor: pointer;
-    border-color: $color-primary-blue;
+#selectableGroup {
+    padding: 0px 20px;
+    border-top: 1px solid $color-primary-blue;
+    border-bottom: 1px solid $color-primary-blue;
+    margin-bottom: 20px;
+
+    .selectable {
+        padding: 16px 25px;
+        color: $color-primary-darkblue;
+        font-family: $font-stack-slabserif;
+        border-radius: 0px;
+        outline: none;
+        width: auto;
+        float: left;
+    }
+    .selectable:hover {
+        cursor: pointer;
+        text-decoration: underline;
+    }
+
+    .selectedRotation {
+        background: $color-primary-blue;
+    }
+
 }
 
-.selectedRotation {
-    background: #81CFE0
+#diseaseSearch {
+    margin: 5px 0 0 70px;
+    float: left;
+    height: 50px;
+    clear: both;
+
+    ::-webkit-input-placeholder::before { 
+        font-family: fontAwesome; 
+        content:'\f002  '; 
+        color: $color-primary-blue; 
+    }
+    ::-moz-placeholder::before  { 
+        font-family: fontAwesome; 
+        content:'\f002  '; 
+        color: $color-primary-blue; 
+    } /* firefox 19+ */
+    :-ms-input-placeholder::before  { 
+        font-family: fontAwesome; 
+        content:'\f002  '; 
+        color: $color-primary-blue; 
+    } /* ie */
+    input:-moz-placeholder::before  { 
+        font-family: fontAwesome; 
+        content:'\f002  '; 
+        color: $color-primary-blue; 
+    }
+    input {
+        font-family: $font-stack-sansserif-1;
+        font-size: 1em;
+        padding: 4px 8px;
+        border: 1px solid $color-primary-gray;
+    }
+    input:active, input:focus {
+        outline: none;
+        border: 1px solid $color-primary-blue;
+    }
+    #clearButton {
+        font-family: $font-stack-sansserif-1;
+        color: $color-primary-gray;
+        font-size: 1em;
+        padding: 5px 8px;
+        border: 1px solid $color-primary-gray;
+        cursor: default;
+    }
+    #clearButton:hover, #clearButton:active, #clearButton:focus {
+        outline: none;
+        border: 1px solid $color-primary-blue;
+        background-color: $color-primary-blue;
+        color: white;
+        cursor: pointer;
+    }
+}
+
+#barChart {
+
+    .bar-chart-item {
+        margin: 18px 0;
+
+        .bar-chart-row {
+            height: 25px;
+            width: 100%;
+            clear: both;
+        }
+
+        .bar-chart-margin-left {
+            height: 25px;
+            width: 70px;
+            float: left;
+        }
+
+        .bar-chart-item-bar {
+            background-color: #eeeeee;
+            height: 25px;
+            width: 0px;
+            float: left;
+            cursor: default;
+            @include transition(all, 0.6s, 0s, ease-in-out);
+        }
+        .bar-chart-item-bar:hover {
+            background-color: #dddddd;
+            cursor: pointer;
+        }
+
+        .goalMet, .goalUnmet, .goalZero {
+            height: 2px;
+            width: 0px;
+            float: left;
+        }
+        .goalMet {
+            background-color: $color-primary-green;
+        }
+        .goalUnmet {
+            background-color: $color-primary-yellow;
+        }
+        .goalZero {
+            background-color: $color-primary-red;
+        }
+
+        .bar-chart-item-label, .bar-chart-item-number {
+            font-family: $font-stack-sansserif-2;
+            color: $color-primary-darkblue;
+            font-size: 1.2em;
+            height: 25px;
+            float: left;
+        }
+        .bar-chart-item-number {
+            padding-left: 6px;
+        }
+    }
+
+    .bar-chart-legend {
+        margin: 50px 0 25px 0;
+        height: 25px;
+        width: 100%;
+        clear: both;
+
+        .bar-chart-legend-goalMet, .bar-chart-legend-goalUnmet, .bar-chart-legend-goalZero {
+            height: 2px;
+            width: 40px;
+            float: left;
+            margin: 11px 5px 0 16px;
+        }
+        .bar-chart-legend-goalMet {
+            background-color: $color-primary-green;
+        }
+        .bar-chart-legend-goalUnmet {
+            background-color: $color-primary-yellow;
+        }
+        .bar-chart-legend-goalZero {
+            background-color: $color-primary-red;
+        }
+        .bar-chart-legendkey {
+            float: left;
+            height: 25px;
+            font-family: $font-stack-sansserif-1;
+        }
+    }
+}
+
+.spinner {
+    position: absolute;
+    margin: 10px auto 0;
+    width: 100%;
+    text-align: center;
+
+    .bounce1 {
+        -webkit-animation-delay: -0.32s;
+        animation-delay: -0.32s;
+    }
+
+    .bounce2 {
+        -webkit-animation-delay: -0.16s;
+        animation-delay: -0.16s;
+    }
+}
+.spinner > div {
+    width: 18px;
+    height: 18px;
+    background-color: $color-primary-blue;
+
+    border-radius: 100%;
+    display: inline-block;
+    -webkit-animation: bouncedelay 1.4s infinite ease-in-out;
+    animation: bouncedelay 1.4s infinite ease-in-out;
+    /* Prevent first frame from flickering when animation starts */
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+@-webkit-keyframes bouncedelay {
+    0%, 80%, 100% { -webkit-transform: scale(0.0) }
+    40% { -webkit-transform: scale(1.0) }
+}
+@keyframes bouncedelay {
+    0%, 80%, 100% { 
+        transform: scale(0.0);
+        -webkit-transform: scale(0.0);
+    } 40% { 
+        transform: scale(1.0);
+        -webkit-transform: scale(1.0);
+    }
 }
