--- a/client/app/rotation/rotation.scss
+++ b/client/app/rotation/rotation.scss
@@ -9,6 +9,8 @@
         color: $color-primary-blue;
         float: left;
         padding: 20px 10px 20px 60px;
+        @include unselectable();
+        cursor: default;
     }
 
     .toplink {
@@ -20,7 +22,7 @@
         margin: 18px 12px;
         border: 1px solid $color-primary-orange;
         border-radius: 5px;
-        @include transition(background-color, 500ms, ease-out);
+        @include transition(background-color, 500ms, 0s, ease-out);
         @include unselectable();
     }
     .toplink:hover {
@@ -79,7 +81,7 @@
     #logout {
         text-decoration: underline;
         cursor: pointer;
-        @include transition(all, 500ms, ease-out);
+        @include transition(all, 500ms, 0s,  ease-out);
     }
 
     #logout:hover, #logout:active, #logout:focus {
@@ -277,7 +279,7 @@
                 background: $color-transparent-blue;
                 text-decoration: none;
                 border: 1px solid $color-primary-tanwhite;
-                @include transition(all, 500ms, ease-out);
+                @include transition(all, 500ms, 0s, ease-out);
             }
             span:hover, span:focus, span:active {
                 cursor: pointer;
