--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -175,6 +175,8 @@ $color-transparent-orange: rgba(242, 120, 75, 0.92);
 // Component styles are injected through grunt
 // injector
 @import 'disease/disease.scss';
+@import 'main/badgesList.scss';
 @import 'main/main.scss';
+@import 'main/studiesList.scss';
 @import 'rotation/rotation.scss';
 // endinjector
