--- a/client/app/acgme/acgme.scss
+++ b/client/app/acgme/acgme.scss
@@ -52,4 +52,45 @@
             float: left;
         }
     }
+
+}
+
+
+#preloader_1{
+    position:relative;
+    display: inline-block;
+    left: -27px;
+}
+#preloader_1 span{
+    display:block;
+    bottom:0px;
+    width: 9px;
+    height: 5px;
+    background: $color-primary-gray;
+    position:absolute;
+    animation: preloader_1 1.5s  infinite ease-in-out;
+}
+ 
+#preloader_1 span:nth-child(2){
+    left:11px;
+    animation-delay: .2s;
+ 
+}
+#preloader_1 span:nth-child(3){
+    left:22px;
+    animation-delay: .4s;
+}
+#preloader_1 span:nth-child(4){
+    left:33px;
+    animation-delay: .6s;
+}
+#preloader_1 span:nth-child(5){
+    left:44px;
+    animation-delay: .8s;
+}
+@keyframes preloader_1 {
+    0% {height:5px;transform:translateY(0px);background: $color-primary-gray;}
+    25% {height:30px;transform:translateY(15px);background: $color-primary-blue;}
+    50% {height:5px;transform:translateY(0px);background: $color-primary-gray;}
+    100% {height:5px;transform:translateY(0px);background: $color-primary-gray;}
 }
