--- a/client/app/rotation/rotation.scss
+++ b/client/app/rotation/rotation.scss
@@ -1,5 +1,13 @@
 #rotation-view {
     text-align: center;
+
+    .section-label {
+        position: absolute;
+        right: 0;
+        color: $color-primary-gray;
+        padding: 5px;
+        font-family: $font-stack-sansserif-1;
+    }
 }
 
 #rotation-carousel {
