--- a/client/app/main/badgesList.scss
+++ b/client/app/main/badgesList.scss
@@ -1,7 +1,7 @@
 #badgesList {
     position: fixed;
     top: 0;
-    width: 100%;
+    //width: 100%;
     height: 100%;
     background-color: $color-transparent-orange;
     color: $color-primary-tanwhite;
